dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: dashboard-ingress
  labels:
      name: dashboard-ingress
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /api/todo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: todo
            port: 
              number: 9001
      - path: /api/todo(/|$)(.*)/
        pathType: Prefix
        backend:
          service:
            name: todo
            port: 
              number: 9001
          
      - path: /api/finances(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: http-finance
            port: 
              number: 9000
      - path: /api/finances(/|$)(.*)/
        pathType: Prefix
        backend:
          service: 
            name: http-finance
            port: 
              number: 9000

      - path: /api/pomodoro(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: pomodoro
            port: 
              number: 8005
      - path: /api/pomodoro(/|$)(.*)/
        pathType: Prefix
        backend:
          service:
            name: pomodoro
            port: 
              number: 8005
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: frontend-ingress
  labels:
      name: frontend-ingress
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port: 
              number: 8080
